# Swarm-OS

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  UI_SYSTEM.md  architecture.md  critique.md  eslint.config.js  governance.md  guide.md  index.html  index.md  log.md  package-lock.json  package.json  pnpm-lock.yaml  project.md  research.md  tech_stack.md  tsconfig.json  ui_ux.md  verify-prompt.md  vitest.config.ts
.claude/: settings.json
.claude/hooks/: query-counter.sh  session-start.sh
.claude/memory/: PROJECT.md
.claude/rules/: INVARIANTS.md  SESSION_PROTOCOL.md
.github/workflows/: ci.yml  nightly.yml
.vibe/: state.json
crates/: Cargo.toml
crates/integration/: Cargo.toml
crates/integration/tests/: cross_crate_test.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: block.rs  error.rs  lib.rs  merkle.rs  persistence.rs  pow.rs
crates/ledger/tests/: ledger_test.rs
crates/membership/: Cargo.toml
crates/membership/src/: error.rs  lib.rs  mesh.rs  node.rs  service.rs
crates/membership/tests/: membership_test.rs
crates/offline-wallet/: Cargo.toml
crates/offline-wallet/src/: balance.rs  cct.rs  error.rs  lib.rs  wallet.rs
crates/offline-wallet/tests/: wallet_test.rs
docs/design/: DESIGN.md  UI_REVIEW_PROMPT.md
docs/design/approved/: 01-dashboard.html  01-mobile-dashboard.html  03-consumer-dashboard.html  04-admin-portal.html  05-onboarding.html  06-model-browser.html  07-credit-purchase.html
docs/design/screens/: 02-node-detail.html
docs/design/stitch-screens/: 02-node-detail.html  03-consumer-dashboard.html  04-admin-portal.html
gateway/: pyproject.toml
gateway/swarm_gateway/: router.py
gateway/tests/: test_health.py  test_router.py
global-plugins/: install.sh
global-plugins/config/: claude-md-additions.md  settings.json
global-plugins/zen-router/: server.py
litellm-proxy/: pyproject.toml
litellm-proxy/swarm_provider/: __init__.py  callback.py  config.py  provider.py
litellm-proxy/tests/: conftest.py  test_callback.py  test_provider.py
node-agent/: Cargo.toml
node-agent/src/: hardware.rs  inference.rs  lib.rs  telemetry.rs
plans/: diagnostic-report.md  phase1-tasks.md
scripts/: dashboard.py  dev.sh  phase0-status.sh  schema.sql  session-export.py  session-replay.py  setup-git-hooks.sh  telemetry-report.sh  telemetry.sh  telemetry_collector.py  verify-environment.sh
scripts/acceptance/: day01.sh  day02.sh  day03.sh  day04.sh  day05.sh  day06.sh  day07.sh  day08.sh  day09.sh  day10.sh  day11.sh  day12.sh  day13.sh  day14.sh  day15.sh  day16.sh  day17.sh  day18.sh  day19.sh  day20.sh
scripts/hooks/: bridge.py  on-code-change.sh  on-prompt.sh  on-session-end.sh  on-session-start.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/hardware/: capability.rs  mod.rs  profiler.rs
src-tauri/src/inference/: engine.rs  mod.rs  model_manager.rs  streaming.rs
src-tauri/src/ipc/: channels.rs  commands.rs  mod.rs
src-tauri/src/litellm/: bridge.rs  mod.rs  process.rs
src-tauri/tests/: blake3_verification.rs  hardware_detection.rs
src/components/chat/: MessageBubble.tsx  StreamingChat.test.tsx  StreamingChat.tsx
src/components/hardware/: CapabilityBadge.tsx  HardwareDisplay.test.tsx  HardwareDisplay.tsx
src/components/model/: DownloadProgress.test.tsx  DownloadProgress.tsx  ModelBrowser.test.tsx  ModelBrowser.tsx
src/components/settings/: ResourceSlider.test.tsx  ResourceSlider.tsx
src/components/tray/: LiveStats.tsx  TrayStatus.tsx
src/hooks/: useHardware.test.ts  useHardware.ts  useInference.test.ts  useInference.ts  useModelManager.ts
src/lib/: tauri-mock.ts  test-utils.tsx
