[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.82.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["swarm_gateway"]
