[project]
name = "swarm-os-litellm-proxy"
version = "0.1.0"
description = "LiteLLM custom provider for Swarm-OS local inference"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "litellm>=1.82.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "respx>=0.22",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
