[package]
name = "node-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Swarm-OS node agent — hardware profiling, inference, telemetry"
repository = "https://github.com/rahlplx/Swarm-OS"

[dependencies]
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
