[package]
name = "swarm-ledger"
version = "0.1.0"
edition = "2021"
description = "Merkle-DAG ledger with Argon2id proof-of-work"

[dependencies]
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "=1.0.217", features = ["derive"] }
bincode = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
