[package]
name = "swarm-membership"
version = "0.1.0"
edition = "2021"
description = "P2P gossip mesh membership layer using libp2p"

[dependencies]
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
serde.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1"
